--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body{
   display: flex;
+  flex-direction:column;
   justify-content: center;
   align-items: center;
 }
@@ -8,4 +9,15 @@ canvas {
   width: 500px;
   height: 500px;
   border: 2px solid black;
+}
+
+.color-container{
+  display: flex;
+  margin-top: 10px;
+}
+
+.color-option {
+  width:30px;
+  height: 30px;
+  cursor: pointer;
 }
