--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,89 @@
-body{
+body {
+  background-image: url("data:image/svg+xml,<svg id='patternId' width='100%' height='99%' xmlns='http://www.w3.org/2000/svg'><defs><pattern id='a' patternUnits='userSpaceOnUse' width='40' height='80' patternTransform='scale(2) rotate(0)'><rect x='0' y='0' width='100%' height='100%' fill='hsla(0,0%,100%,1)'/><path d='M-4.798 13.573C-3.149 12.533-1.446 11.306 0 10c2.812-2.758 6.18-4.974 10-5 4.183.336 7.193 2.456 10 5 2.86 2.687 6.216 4.952 10 5 4.185-.315 7.35-2.48 10-5 1.452-1.386 3.107-3.085 4.793-4.176'  stroke-width='1' stroke='hsla(258.5,59.4%,59.4%,1)' fill='none'/><path d='M-4.798 33.573C-3.149 32.533-1.446 31.306 0 30c2.812-2.758 6.18-4.974 10-5 4.183.336 7.193 2.456 10 5 2.86 2.687 6.216 4.952 10 5 4.185-.315 7.35-2.48 10-5 1.452-1.386 3.107-3.085 4.793-4.176'  stroke-width='1' stroke='hsla(339.6,82.2%,51.6%,1)' fill='none'/><path d='M-4.798 53.573C-3.149 52.533-1.446 51.306 0 50c2.812-2.758 6.18-4.974 10-5 4.183.336 7.193 2.456 10 5 2.86 2.687 6.216 4.952 10 5 4.185-.315 7.35-2.48 10-5 1.452-1.386 3.107-3.085 4.793-4.176'  stroke-width='1' stroke='hsla(198.7,97.6%,48.4%,1)' fill='none'/><path d='M-4.798 73.573C-3.149 72.533-1.446 71.306 0 70c2.812-2.758 6.18-4.974 10-5 4.183.336 7.193 2.456 10 5 2.86 2.687 6.216 4.952 10 5 4.185-.315 7.35-2.48 10-5 1.452-1.386 3.107-3.085 4.793-4.176'  stroke-width='1' stroke='hsla(47,80.9%,61%,1)' fill='none'/></pattern></defs><rect width='800%' height='800%' transform='translate(-100,0)' fill='url(%23a)'/></svg>");
   display: flex;
-  flex-direction:column;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
+  justify-content: center;
 }
 
 canvas {
   width: 500px;
   height: 500px;
-  border: 2px solid black;
+  margin: 40px auto 10px auto;
+  border: 5px solid black;
+  z-index: 9;
+  background-color: #fff;
+  border-radius: 20px;  
 }
 
-.color-container{
+.color-container {
   display: flex;
   margin-top: 10px;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  right: 10%;
+  top: 30px;
 }
 
 .color-option {
-  width:30px;
-  height: 30px;
+  width: 35px;
+  height: 35px;
   cursor: pointer;
+  border-radius: 50%;
+  margin-top: 5px;
+  border: 1px solid #fff;
+}
+
+
+input[type=color]{
+  position: absolute;
+  right: 10%;
+  width: 40px;
+  height: 40px;
+  top: 550px;
+  border-radius: 50%;
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  background-color: transparent;
+  border: none;
+}
+
+#line-width{
+  position: absolute;
+  right: 10%;
+  top: 600px;
+}
+
+button{
+  font-weight: 700;
+  background-color: #fff;
+  border: 2px solid #000;
+  border-radius: 10px;
+  padding: 5px 10px;
+}
+
+#text{
+  position: absolute;
+  right: calc(50%-130px);
+  top: 600px;
+  width: 260px;
+  height: 30px;
+  border: none;
+  border: none;
+  border-radius: 10px;
+  background-color: #000;
+  color: #fff;
+  font-size: 12px;
+  font-weight: 500;
+  text-indent: 15px;
+}
+
+#text::placeholder{
+  font-size: 12px;
+  font-weight: 500;
+  background-color: rgb(0, 0, 0);
+  color: #fff
+  ;
 }
